--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -225,4 +225,16 @@
   <data name="Achievements" xml:space="preserve">
     <value>Trofeje</value>
   </data>
+  <data name="Users" xml:space="preserve">
+    <value>Užívatelia</value>
+  </data>
+  <data name="Friends" xml:space="preserve">
+    <value>Priatelia</value>
+  </data>
+  <data name="FriendRequests" xml:space="preserve">
+    <value>Žiadosti o priateľstvo</value>
+  </data>
+  <data name="BlockedUsers" xml:space="preserve">
+    <value>Zablokovaní</value>
+  </data>
 </root>
