--- a/Client.UI/Resources/Texts.sk-SK.resx
+++ b/Client.UI/Resources/Texts.sk-SK.resx
@@ -237,4 +237,10 @@
   <data name="BlockedUsers" xml:space="preserve">
     <value>Zablokovaní</value>
   </data>
+  <data name="Add" xml:space="preserve">
+    <value>Pridať</value>
+  </data>
+  <data name="Block" xml:space="preserve">
+    <value>Zablokovať</value>
+  </data>
 </root>
