--- a/Client.UI/Resources/Texts.cs-CZ.resx
+++ b/Client.UI/Resources/Texts.cs-CZ.resx
@@ -243,4 +243,7 @@
   <data name="Block" xml:space="preserve">
     <value>Zablokovat</value>
   </data>
+  <data name="Remove" xml:space="preserve">
+    <value>Odstranit</value>
+  </data>
 </root>
