Moved type definitions to class/structure namespace in cases of private usage, sending friend request is no longer possible to users from which there is a pending friend request

--- a/Client.Logic/Resources/Texts.cs-CZ.resx
+++ b/Client.Logic/Resources/Texts.cs-CZ.resx
@@ -264,4 +264,7 @@
   <data name="FriendRequestReceived" xml:space="preserve">
     <value>Nová žádost o přátelství od {0}</value>
   </data>
+  <data name="FriendRequestPending" xml:space="preserve">
+    <value>Již máte nevyřízenou žádost o přátelství od uživatele {0}</value>
+  </data>
 </root>
